feat: Add notes 'Fully automated deployment' #303

--- a/12_fully_automated_deployment/12_fully_automated_deployment/Jenkinsfile
+++ b/12_fully_automated_deployment/12_fully_automated_deployment/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
     environment {
         //be sure to replace "willbla" with your own Docker Hub username
         DOCKER_IMAGE_NAME = "guhyungm7/train-schedule"
+        CANARY_REPLICAS = 0
     }
     stages {
         stage('Build') {
@@ -57,9 +58,6 @@ pipeline {
             when {
                 branch 'master'
             }
-            environment { 
-                CANARY_REPLICAS = 0
-            }
             steps {
                 milestone(1)
                 kubernetesDeploy(
@@ -73,6 +71,15 @@ pipeline {
                     enableConfigSubstitution: true
                 )
             }
+        }
+    }
+    post {
+        cleanup {
+            kubernetesDeploy(
+                kubeconfigId: 'kubeconfig',
+                configs: 'train-schedule-kube-canary.yml',
+                enableConfigSubstitution: true
+            )
         }
     }
 }
